Add generated exception handling