@@ -1,27 +1,10 @@
-/*
- * Copyright (c) 2024 Cyan Kneelawk.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 package com.kneelawk.commonevents.impl.gen;
 
-import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.util.function.Consumer;
 import java.util.function.Function;
 
+import org.jetbrains.annotations.Nullable;
 import org.objectweb.asm.ClassWriter;
 import org.objectweb.asm.Handle;
 import org.objectweb.asm.Label;
@@ -31,12 +14,10 @@ import org.objectweb.asm.commons.GeneratorAdapter;
 import org.objectweb.asm.commons.Method;
 
 import com.kneelawk.commonevents.api.adapter.util.AdapterUtils;
-import com.kneelawk.commonevents.impl.CEConstants;
-import com.kneelawk.commonevents.impl.CELog;
-import com.kneelawk.commonevents.impl.Platform;
 
-public class ImplementationGenerator {
-    private static final String PREFIX = "com.kneelawk.commonevents.impl.gen.impl.$CommonEvents_Generated$.";
+public class SimpleCallbackImplGenerator extends AbstractCodeGenerator<SimpleCallbackImplGenerator.Spec> {
+    private static final SimpleCallbackImplGenerator INSTANCE = new SimpleCallbackImplGenerator();
+
     private static final Handle LMF_HANDLE =
         new Handle(Opcodes.H_INVOKESTATIC, "java/lang/invoke/LambdaMetafactory", "metafactory", //
             "(" + //
@@ -48,44 +29,15 @@ public class ImplementationGenerator {
                 ")" + //
                 "Ljava/lang/invoke/CallSite;", //
             false);
-    private static final Loader LOADER =
-        new Loader("event-implementation-generator", ImplementationGenerator.class.getClassLoader());
 
-    private static class Loader extends ClassLoader {
-        public Loader(String name, ClassLoader parent) {
-            super(name, parent);
-        }
-
-        @Override
-        protected Class<?> findClass(String name) throws ClassNotFoundException {
-            if (!name.startsWith(PREFIX)) throw new ClassNotFoundException(name);
-
-            String interfaceName = name.substring(PREFIX.length());
-            Class<?> interfaceClass = Class.forName(interfaceName);
-
-            String internalName = name.replace('.', '/');
-            byte[] bytes = generateClass(Type.getObjectType(internalName), interfaceClass);
-
-            if (CEConstants.EXPORT_GENERATED_CLASSES) {
-                Path classPath =
-                    Platform.getInstance().getGameDirectory().resolve(".common-events/" + internalName + ".class");
-                try {
-                    Path parentPath = classPath.getParent();
-                    if (!Files.exists(parentPath)) {
-                        Files.createDirectories(parentPath);
-                    }
-                    Files.write(classPath, bytes);
-                } catch (IOException e) {
-                    CELog.LOGGER.warn("[Common Events] Unable to write exported generated class to {}", classPath, e);
-                }
-            }
-
-            return defineClass(name, bytes, 0, bytes.length);
-        }
+    private SimpleCallbackImplGenerator() {
+        super("com.kneelawk.commonevents.impl.gen.impl.$CommonEvents_Generated$.SimpleCallbackImpl",
+            "event-simple-implementation-generator");
     }
 
     @SuppressWarnings("unchecked")
-    public static <T> Function<T[], T> defineSimple(Class<? super T> interfaceClass) {
+    public static <T> Function<T[], T> defineSimple(Class<? super T> interfaceClass,
+                                                    @Nullable Consumer<Exception> catchErrors) {
         if (!interfaceClass.isInterface())
             throw new IllegalArgumentException(interfaceClass.getName() + " is not a functional interface");
 
@@ -98,53 +50,103 @@ public class ImplementationGenerator {
                 " is not a simple functional interface. Simple functional interfaces must not return anything.");
 
         try {
-            return (Function<T[], T>) LOADER.loadClass(PREFIX + interfaceClass.getName()).getConstructor()
-                .newInstance();
+            Class<Function<T[], T>> clazz =
+                (Class<Function<T[], T>>) INSTANCE.getOrCreateClass(new Spec(interfaceClass, catchErrors != null));
+
+            if (catchErrors != null) {
+                return clazz.getConstructor(Consumer.class).newInstance(catchErrors);
+            } else {
+                return clazz.getConstructor().newInstance();
+            }
         } catch (ClassNotFoundException | InvocationTargetException | InstantiationException | IllegalAccessException |
                  NoSuchMethodException e) {
             throw new RuntimeException("Unable to generate simple implementation for " + interfaceClass.getName(), e);
         }
     }
 
-    private static byte[] generateClass(Type name, Class<?> interfaceClass) {
+    @Override
+    protected byte[] generateClass(Spec spec, Type beingDefined) {
         ClassWriter writer = new ClassWriter(ClassWriter.COMPUTE_MAXS | ClassWriter.COMPUTE_FRAMES);
 
-        Type interfaceType = Type.getType(interfaceClass);
+        Type interfaceType = Type.getType(spec.interfaceClass());
         Type interfaceArrayType = Type.getType("[" + interfaceType.getDescriptor());
-        java.lang.reflect.Method interfaceMethod = AdapterUtils.getSingularMethod(interfaceClass);
+        java.lang.reflect.Method interfaceMethod = AdapterUtils.getSingularMethod(spec.interfaceClass());
         assert interfaceMethod != null;
         Method interfaceMethodName = Method.getMethod(interfaceMethod);
         Type interfaceMethodType = Type.getType(interfaceMethod);
         Type[] interfaceMethodArgs = interfaceMethodName.getArgumentTypes();
 
         Type functionType = Type.getType(Function.class);
+        Type consumerType = Type.getType(Consumer.class);
+        Type exceptionType = Type.getType(Exception.class);
+        Type objectType = Type.getType(Object.class);
+
         Method applyMethodName =
             new Method("apply", interfaceType, new Type[]{interfaceArrayType});
-
-        Type objectType = Type.getType(Object.class);
+        Type[] capturedArgumentTypes;
+        if (spec.catchErrors()) {
+            capturedArgumentTypes = new Type[]{interfaceArrayType, consumerType};
+        } else {
+            capturedArgumentTypes = new Type[]{interfaceArrayType};
+        }
+        Method capturedMethodName =
+            new Method(interfaceMethodName.getName(), interfaceType, capturedArgumentTypes);
+        Method consumerAccept = new Method("accept", Type.VOID_TYPE, new Type[]{objectType});
+        Method objectInit = Method.getMethod("void <init> ()");
 
         String signature = objectType.getDescriptor() + "L" + functionType.getInternalName() + "<" +
             interfaceArrayType.getDescriptor() + interfaceType.getDescriptor() + ">;";
 
-        writer.visit(AdapterUtils.JAVA_VERSION, Opcodes.ACC_PUBLIC, name.getInternalName(), signature,
+        writer.visit(AdapterUtils.JAVA_VERSION, Opcodes.ACC_PUBLIC, beingDefined.getInternalName(), signature,
             objectType.getInternalName(), new String[]{functionType.getInternalName()});
         writer.visitInnerClass("java/lang/invoke/MethodHandles$Lookup", "java/lang/invoke/MethodHandles", "Lookup",
             Opcodes.ACC_PUBLIC | Opcodes.ACC_FINAL | Opcodes.ACC_STATIC);
 
-        Method initMethod = Method.getMethod("void <init> ()");
-        GeneratorAdapter constructor = new GeneratorAdapter(Opcodes.ACC_PUBLIC, initMethod, null, null, writer);
+        if (spec.catchErrors()) {
+            writer.visitField(Opcodes.ACC_PRIVATE | Opcodes.ACC_FINAL, "exceptionHandler",
+                consumerType.getDescriptor(),
+                "L" + consumerType.getInternalName() + "<" + exceptionType.getDescriptor() + ">;", null).visitEnd();
+        }
+
+        Method initMethod;
+        String initSignature;
+        if (spec.catchErrors()) {
+            initMethod = new Method("<init>", Type.VOID_TYPE, new Type[]{consumerType});
+            initSignature = "(L" + consumerType.getInternalName() + "<" + exceptionType.getDescriptor() + ">;)V";
+        } else {
+            initMethod = objectInit;
+            initSignature = null;
+        }
+        GeneratorAdapter constructor =
+            new GeneratorAdapter(Opcodes.ACC_PUBLIC, initMethod, initSignature, null, writer);
         constructor.loadThis();
-        constructor.invokeConstructor(objectType, initMethod);
+        constructor.invokeConstructor(objectType, objectInit);
+        if (spec.catchErrors()) {
+            constructor.loadThis();
+            constructor.loadArg(0);
+            constructor.putField(beingDefined, "exceptionHandler", consumerType);
+        }
         constructor.returnValue();
         constructor.endMethod();
 
+        Type[] suffixArgs;
+        if (spec.catchErrors()) {
+            suffixArgs = prefix(consumerType, interfaceMethodArgs);
+        } else {
+            suffixArgs = interfaceMethodArgs;
+        }
         Method lambdaMethodName =
-            new Method("lambda$apply$0", Type.VOID_TYPE, prefix(interfaceArrayType, interfaceMethodArgs));
+            new Method("lambda$apply$0", Type.VOID_TYPE, prefix(interfaceArrayType, suffixArgs));
 
         GeneratorAdapter apply = new GeneratorAdapter(Opcodes.ACC_PUBLIC, applyMethodName, null, null, writer);
         apply.loadArg(0);
-        apply.invokeDynamic(interfaceMethodName.getName(), applyMethodName.getDescriptor(), LMF_HANDLE,
-            interfaceMethodType, new Handle(Opcodes.H_INVOKESTATIC, name.getInternalName(), lambdaMethodName.getName(),
+        if (spec.catchErrors()) {
+            apply.loadThis();
+            apply.getField(beingDefined, "exceptionHandler", consumerType);
+        }
+        apply.invokeDynamic(capturedMethodName.getName(), capturedMethodName.getDescriptor(), LMF_HANDLE,
+            interfaceMethodType,
+            new Handle(Opcodes.H_INVOKESTATIC, beingDefined.getInternalName(), lambdaMethodName.getName(),
                 lambdaMethodName.getDescriptor(), false), interfaceMethodType);
         apply.returnValue();
         apply.endMethod();
@@ -155,7 +157,7 @@ public class ImplementationGenerator {
         applyBridge.loadThis();
         applyBridge.loadArg(0);
         applyBridge.checkCast(interfaceArrayType);
-        applyBridge.invokeVirtual(name, applyMethodName);
+        applyBridge.invokeVirtual(beingDefined, applyMethodName);
         applyBridge.returnValue();
         applyBridge.endMethod();
 
@@ -170,26 +172,46 @@ public class ImplementationGenerator {
         int iLocal = lambda.newLocal(Type.INT_TYPE);
         lambda.storeLocal(iLocal);
 
-        Label loop = lambda.newLabel();
+        Label loop = lambda.mark();
         Label end = lambda.newLabel();
-        lambda.visitLabel(loop);
         lambda.loadLocal(iLocal);
         lambda.loadLocal(lenLocal);
         lambda.ifICmp(GeneratorAdapter.GE, end);
+
+        Label tryStart = null;
+        Label tryEnd = null;
+        Label tryAfter = null;
+        if (spec.catchErrors()) {
+            tryStart = lambda.mark();
+            tryEnd = lambda.newLabel();
+            tryAfter = lambda.newLabel();
+        }
 
         lambda.loadArg(0);
         lambda.loadLocal(iLocal);
         lambda.arrayLoad(interfaceType);
         for (int argIndex = 0; argIndex < interfaceMethodArgs.length; argIndex++) {
             // argIndex + 1 because the first arg is the array of callbacks
-            lambda.loadArg(argIndex + 1);
+            lambda.loadArg(argIndex + (spec.catchErrors() ? 2 : 1));
         }
         lambda.invokeInterface(interfaceType, interfaceMethodName);
+
+        if (spec.catchErrors()) {
+            lambda.mark(tryEnd);
+            lambda.goTo(tryAfter);
+
+            lambda.catchException(tryStart, tryEnd, exceptionType);
+            lambda.loadArg(1);
+            lambda.swap();
+            lambda.invokeInterface(consumerType, consumerAccept);
+
+            lambda.mark(tryAfter);
+        }
 
         lambda.iinc(iLocal, 1);
         lambda.goTo(loop);
 
-        lambda.visitLabel(end);
+        lambda.mark(end);
         lambda.returnValue();
         lambda.endMethod();
 
@@ -202,4 +224,6 @@ public class ImplementationGenerator {
         System.arraycopy(types, 0, newTypes, 1, types.length);
         return newTypes;
     }
+
+    protected record Spec(Class<?> interfaceClass, boolean catchErrors) {}
 }
